--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "react-dom": "18.2.0",
     "react-router-dom": "6.8.0",
     "react-scripts": "5.0.1",
+    "styled-components": "5.3.6",
     "web-vitals": "2.1.4"
   },
   "scripts": {
@@ -44,6 +45,7 @@
     "@types/node": "16.18.11",
     "@types/react": "18.0.27",
     "@types/react-dom": "18.0.10",
+    "@types/styled-components": "5.1.26",
     "@typescript-eslint/eslint-plugin": "5.50.0",
     "@typescript-eslint/parser": "5.50.0",
     "eslint": "8.33.0",
